ensure no double scrollbars when dialog is open

--- a/src/scss/base/elements/_root.scss
+++ b/src/scss/base/elements/_root.scss
@@ -28,6 +28,7 @@ body {
 	overflow-x: clip;
 }
 
-html:has(dialog[open]) {
-	overflow: clip;
+html:has(dialog[open]),
+body:has(dialog[open]) {
+	overflow: hidden;
 }
